# castepbin-rust

./: Cargo.toml  README.md  Si2.castep  Si2.castep_bin
benches/: my_benchmark.rs
src/: dos.rs  lib.rs  parser.rs  test.rs  util.rs
src/config/: mod.rs  pdos_config.rs
src/dos/: dos_compute.rs  dos_util.rs  mod.rs  pdos_compute.rs  pdos_util.rs
src/parser/: bands.rs  castep.rs  castep_bin.rs  general.rs  mod.rs  pdos_weights.rs
